# stock_cpp

./: .gitignore  CMakeLists.txt  DayOfTheYear.h  Helpers.cpp  Helpers.h  Series.cpp  Series.h  SeriesInterval.h  SeriesSample.cpp  SeriesSample.h  SeriesSampleExtended.cpp  SeriesSampleExtended.h  SeriesTests.cpp  Strategy.cpp  Strategy.h  Trader.cpp  Trader.h  TraderOperation.cpp  TraderOperation.h  main.cpp  root.h  stock
Genetics/: FactorGeneration.cpp  FactorGeneration.h  Generation.cpp  Generation.h
Operator/: Operator.cpp  Operator.h  OperatorAdd.cpp  OperatorAdd.h  OperatorAtan.cpp  OperatorAtan.h  OperatorBinary.cpp  OperatorBinary.h  OperatorDivide.cpp  OperatorDivide.h  OperatorEma.cpp  OperatorEma.h  OperatorLog.cpp  OperatorLog.h  OperatorMultiply.cpp  OperatorMultiply.h  OperatorNumber.cpp  OperatorNumber.h  OperatorSeries.cpp  OperatorSeries.h  OperatorSma.cpp  OperatorSma.h  OperatorSubtract.cpp  OperatorSubtract.h  OperatorUnary.cpp  OperatorUnary.h
Series/: TimeOfDay.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
stock_cpp/: main.cpp
stock_cpp.xcodeproj/: project.pbxproj
stock_cpp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
stock_cpp.xcodeproj/project.xcworkspace/xcshareddata/: stock_cpp.xccheckout
stock_cpp.xcodeproj/project.xcworkspace/xcuserdata/volchnik.xcuserdatad/: UserInterfaceState.xcuserstate
stock_cpp.xcodeproj/project.xcworkspace/xcuserdata/volchnik.xcuserdatad/xcdebugger/: Expressions.xcexplist
stock_cpp.xcodeproj/xcuserdata/volchnik.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
stock_cpp.xcodeproj/xcuserdata/volchnik.xcuserdatad/xcschemes/: stock_cpp.xcscheme  stock_cpp_prod.xcscheme  tests.xcscheme  unit_tests.xcscheme  xcschememanagement.plist
tests/: CMakeLists.txt  main.cpp
